[build-system]
requires = ["setuptools~=62.3", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name        = "python-typing-update"
version     = "0.4.3.dev1"  # template: x.x.x[.dev1]
license     = {text = "MIT"}
description = "Update Python typing syntax"
readme      = "README.md"
authors     = [{name = "Marc Mueller"}]
keywords    = ["typing", "pep585", "pep604"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]
requires-python = ">=3.8"
dependencies    = [
    "aiofiles==22.1.0",
    # Custom autoflake version to parse 3.10 syntax
    "autoflake @ git+https://github.com/cdce8p/autoflake.git@v1.4.c1",
    "isort==5.10.1",
    "pyupgrade==2.38.2",
    "reorder-python-imports==3.8.3",
]

[project.optional-dependencies]
black = [
    "black==22.10.0",
]

[project.scripts]
python-typing-update = "python_typing_update.__main__:main"

[tool.setuptools]
license-files = ["LICENSE", "AUTHORS"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.setuptools.packages.find]
include = ["python_typing_update*"]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
multi_line_output = 4
line_length = 72
combine_as_imports = true
force_sort_within_sections = true
known_first_party = [
    "python_typing_update",
    "tests",
]
forced_separate = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["fixtures"]
console_output_style = "count"
log_level = "NOTSET"
asyncio_mode = "auto"  # https://github.com/pytest-dev/pytest-asyncio#modes

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = 3.8
show_error_codes = true
ignore_missing_imports = true
strict = true
follow_imports = "normal"
exclude = "tests/fixtures/.+\\.py"
# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# None and optional handeling
no_implicit_optional = true
strict_optional = true
# Configure warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
# Misc
implicit_reexport = false
strict_equality = true
enable_error_code = ["ignore-without-code"]
# TODO
allow_any_generics = true

# [[tool.mypy.overrides]]
# module = "tests.*"
# # Untyped definitions and calls
# disallow_untyped_calls = false
# disallow_untyped_defs = false
# disallow_incomplete_defs = false
