[metadata]
name = python-typing-update
author = Marc Mueller
description = Update Python typing syntax
long_description = file:README.md
long_description_content_type = text/markdown
keywords = typing,pep585,pep604
license = MIT
license_files =
    LICENSE
    AUTHORS
url = https://github.com/cdce8p/python-typing-update
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development

[options]
packages = find:
python_requires = >=3.8,<3.10

[options.packages.find]
include =
    python_typing_update*

[options.entry_points]
console_scripts =
    python-typing-update = python_typing_update.__main__:main

[flake8]
ignore = E203,E231,E701,W503,W504
# E203,E231,E701 -> walrus
# W503/504 -> line-break-before/after-binary-operator
max_line_length = 119
extend_exclude =
    .github,
    .vscode,
    tests/fixtures,
    venv*,

[tool:pytest]
testpaths = tests
norecursedirs = fixtures
console_output_style = count
log_level = NOTSET

[tool:isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
multi_line_output = 4
line_length = 72
known_first_party =
    python_typing_update, tests
forced_separate =
    tests
combine_as_imports = true

[mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = 3.8
ignore_missing_imports = true
follow_imports = normal
exclude = tests/fixtures/.+\.py
# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# None and optional handeling
no_implicit_optional = true
strict_optional = true
# Configure warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
# Misc
implicit_reexport = false
strict_equality = true
# TODO
allow_any_generics = true

[mypy-tests.*]
# Untyped definitions and calls
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
