[metadata]
name = python-typing-update
# Version template: x.x.x[.dev1]
version = 0.3.6.dev1
author = Marc Mueller
description = Update Python typing syntax
long_description = file:README.md
long_description_content_type = text/markdown
keywords = typing,pep585,pep604
license = MIT
license_files =
    LICENSE
    AUTHORS
url = https://github.com/cdce8p/python-typing-update
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development

[options]
packages = find:
python_requires = >=3.8,<3.10
include_package_data = True
install_requires =
    aiofiles==0.8.0
    autoflake==1.4
    isort==5.10.1
    pyupgrade==2.32.0
    reorder-python-imports==3.0.1

[options.extras_require]
black =
    black==22.3.0

[options.package_data]
* = py.typed, *.pyi

[options.packages.find]
include =
    python_typing_update*

[options.entry_points]
console_scripts =
    python-typing-update = python_typing_update.__main__:main

[flake8]
max_line_length = 119
extend_exclude =
    .github,
    .vscode,
    tests/fixtures,
    venv*,

[mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = 3.8
ignore_missing_imports = true
follow_imports = normal
exclude = tests/fixtures/.+\.py
# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# None and optional handeling
no_implicit_optional = true
strict_optional = true
# Configure warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
# Misc
implicit_reexport = false
strict_equality = true
# TODO
allow_any_generics = true

[mypy-tests.*]
# Untyped definitions and calls
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
