[metadata]
name = python-typing-update
# Version template: x.x.x[.dev1]
version = 0.4.0
author = Marc Mueller
description = Update Python typing syntax
long_description = file:README.md
long_description_content_type = text/markdown
keywords = typing,pep585,pep604
license = MIT
license_files =
    LICENSE
    AUTHORS
url = https://github.com/cdce8p/python-typing-update
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    aiofiles==0.8.0
    autoflake==1.4
    isort==5.10.1
    pyupgrade==2.32.0
    reorder-python-imports==3.0.1

[options.extras_require]
black =
    black==22.3.0

[options.package_data]
* = py.typed, *.pyi

[options.packages.find]
include =
    python_typing_update*

[options.entry_points]
console_scripts =
    python-typing-update = python_typing_update.__main__:main

[flake8]
max_line_length = 119
extend_exclude =
    .github,
    .vscode,
    tests/fixtures,
    venv*,
